--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,11 @@ buildscript {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-        maven {
-            url 'https://plugins.gradle.org/m2/'
+    }
+    configurations.classpath {
+        resolutionStrategy {
+            cacheDynamicVersionsFor 10, "seconds"
+            cacheChangingModulesFor 0, "seconds"
         }
     }
     dependencies {
@@ -14,16 +17,22 @@ buildscript {
     }
 }
 
-apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'eclipse'
+apply from: "buildtools/ColoredOutput.gradle"
+apply plugin: 'idea'
 apply plugin: 'maven'
 apply plugin: 'java'
-//Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
+apply plugin: 'net.minecraftforge.gradle'
 
-String minecraftversion= "1.14.2"
-version = "1.0.3"
+//adds the build number to the end of the version string if on a build server
+String build_number = System.getenv().BUILD_NUMBER
+if (build_number == null) {
+    build_number = "9999"
+}
+
+String semver = "${project.version_major}.${project.version_minor}.${project.version_patch}"
+
+version = "${semver}.${build_number}"
 group = "cjminecraft.rad" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "rad-1.14.2"
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
@@ -31,22 +40,22 @@ repositories {
 
 }
 
+dependencies {
+    minecraft "net.minecraftforge:forge:${project.mcversion}-${project.forgeversion}"
+}
+
 minecraft {
-    mappings channel: 'snapshot', version: '20190616-1.14.2'
+    mappings channel: 'snapshot', version: project.mcp_mappings
     accessTransformer = file('src/main/resources/META-INF/rad_at.cfg')
     runs {
         client = {
-            // recommended logging data for a userdev environment
             properties 'forge.logging.markers': 'SCAN,REGISTRIES,REGISTRYDUMP'
-            // recommended logging level for the console
             properties 'forge.logging.console.level': 'debug'
             workingDirectory project.file('run').canonicalPath
             source sourceSets.main
         }
         server = {
-            // recommended logging data for a userdev environment
             properties 'forge.logging.markers': 'SCAN,REGISTRIES,REGISTRYDUMP'
-            // recommended logging level for the console
             properties 'forge.logging.console.level': 'debug'
             workingDirectory project.file('run').canonicalPath
             source sourceSets.main
@@ -55,21 +64,28 @@ minecraft {
 }
 
 jar {
-    manifest {
-        attributes 'FMLAT': 'rad_at.cfg'
-    }
-}
+    from sourceSets.main.output.classesDirs
+    from sourceSets.main.output.resourcesDir
 
-dependencies {
-    minecraft 'net.minecraftforge:forge:1.14.2-26.0.25'
+    manifest {
+        attributes([
+                "Specification-Title": "Reload Audio Driver",
+                "Specification-Vendor": "CJMinecraft01",
+                "Specification-Version": "${semver}",
+                "Implementation-Title": project.name,
+                "Implementation-Version": "${project.version}",
+                "Implementation-Vendor" :"CJMinecraft01",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+        ])
+    }
 }
 
 processResources {
     inputs.property "version", version
-    inputs.property "mcversion",minecraftversion
+    inputs.property "mcversion", project.mcversion
     from(sourceSets.main.resources.srcDirs) {
         include 'mods.toml'
-        expand 'version': version, 'mcversion': minecraftversion
+        expand 'version': version, 'mcversion': project.mcversion
     }
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mods.toml'
