--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,12 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
+org.gradle.daemon=false
 org.gradle.jvmargs=-Xmx3G
+
+mcversion=1.14.2
+forgeversion=26.0.63
+mcp_mappings=20190615-1.14.2
+
+version_major=1
+version_minor=0
+version_patch=4
