--- a/src/main/resources/META-INF/rad_at.cfg
+++ b/src/main/resources/META-INF/rad_at.cfg
@@ -1,2 +1,2 @@
-public net.minecraft.client.audio.SoundHandler field_147694_f # sndManager
+public-f net.minecraft.client.audio.SoundHandler field_147694_f # sndManager
 public net.minecraft.client.KeyboardListener field_197975_d # actionKeyF3
