--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,11 @@
 org.gradle.daemon=false
 org.gradle.jvmargs=-Xmx3G
 
-mcversion=1.14.3
-forgeversion=27.0.2
-mcp_mappings=20190625-1.14.3
+MCVersion=1.14.3
+ForgeVersion=27.0.2
+MCPMappings=20190625-1.14.3
 
 version_major=1
 version_minor=0
 version_patch=4
+build_number = 9999
