--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx3G
 
 MCVersion=1.14.3
 ForgeVersion=27.0.2
-MCPMappings=20190625-1.14.3
+MCPMappings=20190625
 
 version_major=1
 version_minor=0
