--- a/src/main/resources/META-INF/rad_at.cfg
+++ b/src/main/resources/META-INF/rad_at.cfg
@@ -1,2 +1,3 @@
 public net.minecraft.client.audio.SoundHandler field_147694_f # sndManager
-public net.minecraft.client.Minecraft field_184129_aV # actionKeyF3
+public net.minecraft.client.KeyboardListener field_197975_d # actionKeyF3
+public net.minecraft.client.KeyboardListener func_197964_a(Ljava/lang/String;[Ljava/lang/Object;)V # printDebugMessage
