--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,13 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
+
+modGroup=cjminecraft.rad
+modId=rad
+modVersion=2.0.0
+modFileName=rad-1.14
+modMinecraftVersion=1.14.4
+modForgeVersion=28.2.4
+modMcpMappingsChannel=snapshot
+modMcpMappingsVersion=20200119-1.14.4
