--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,15 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
+
+modVersion=4.0.0
+modGroup=cjminecraft.rad
+modFileName=rad-1.16
+modId=rad
+
+modMCPChannel=snapshot
+modMCPVersion=20200514-1.16
+
+modMinecraftVersion=1.16.1
+modForgeVersion=32.0.23
