--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,2 @@
-public net.minecraft.client.audio.SoundHandler field_147694_f # sndManager
-public net.minecraft.client.KeyboardListener field_197975_d # actionKeyF3
+public net.minecraft.client.sounds.SoundManager f_120349_ # soundEngine
+public net.minecraft.client.KeyboardHandler f_90873_ # handledDebugKey
