--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,13 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-modVersion=4.1.1
+modVersion=5.0.0
 modGroup=cjminecraft.rad
-modFileName=rad-1.16
+modFileName=rad-1.17
 modId=rad
 
-modMCPChannel=snapshot
-modMCPVersion=20200723-1.16.1
+modMCPChannel=official
+modMCPVersion=1.17.1
 
-modMinecraftVersion=1.16.5
-modForgeVersion=36.1.4
+modMinecraftVersion=1.17.1
+modForgeVersion=37.0.13
